# ado-workitem-watcher

./: .gitignore  Dockerfile  LICENSE.MD  README.md  aks-deployment.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: main.py
app/adowork/: ado_context.py  work_item.py  work_item_event.py
app/templates/: design-document.md
