[tool.poetry]
name = "ado-workitem-watcher"
version = "0.1.0"
description = ""
authors = ["Stephen L. McMahon <stephen@slmcmahon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-servicebus = "^7.12.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
